Add noun phrase analysis (#81)
* Add noun phrase analysis support to `NlpTextAnalyzer`

- Introduced `nounPhrasesCount` property in `TextItemData`.
- Added `NOUN_PHRASES_COUNT` to `TextInformationItemCharacteristics`.
- Implemented `nounPhrasesCount` method in `NlpTextAnalyzer` to identify noun phrases using linguistic tree analysis.
- Updated test cases in `NlpTextAnalyzerTest` to validate noun phrase analysis.
- Enhanced property files to include translations for noun phrase analysis identifiers.